--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,8 @@
             ],
             "styles": [
               "node_modules/devextreme/dist/css/dx.common.css",
+              "src/themes/generated/theme.additional.css",
+              "src/themes/generated/theme.base.css",
               "src/styles.scss"
             ],
             "scripts": [],
